[package]
name = "block-tool"
version = "0.1.0"
description = "PKT Block Tool"
authors = ["tuyenpkt"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "block_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"
anyhow = "1.0.102"
libc = "0.2.186"
